--- a/RotatoChip/App.xaml
+++ b/RotatoChip/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application x:Class="Crews.Utility.RotatoChip.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Crews.Utility.RotatoChip">
+             xmlns:local="clr-namespace:Crews.Utility.RotatoChip"
+             ShutdownMode="OnExplicitShutdown">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
